--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -12,4 +12,18 @@
         font-family: 'Roboto', sans-serif !important;
         line-height: 1.5;
     }
+
+    div::-webkit-scrollbar-thumb {
+         background-color: #333;
+     }
+
+    div::-webkit-scrollbar-track {
+         -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+         background-color: #666;
+     }
+
+    div::-webkit-scrollbar {
+         width: 6px;
+         background-color: #f5f5f5;
+     }
 </style>
